# Parallel-Computing-2025

./: .gitignore
Ash/Part 1/: CMakeLists.txt  parallel.c
Mehdi/Part 1/: CMakeLists.txt  parallel.c
Mehdi/Part 2/part2temp/: CMakeLists.txt  parallel.c  parallel.cl
Mehdi/Part2-PreReturn/PreReturnFiles/PreReturnFiles/: CMakeLists.txt  Instructions.txt  VSTermianl.txt  VectorAdd.c  VectorAdd.cl  vectoradd
Original Code/Satellites/: CMakeLists.txt
Original Code/Satellites-Project work code files/Satellites/: CMakeLists.txt
Report-shared/1/: Parallel Project V1.0.docx  Part1-01-11-V1.2.docx  Part1-01-11-V1.docx  Part1-31-10-V1.docx  Part1.docx  ~$rt1-01-11-V1.2.docx
Report-shared/2/: Exc. Temp..docx  Part2-10.11-V1.0.docx  Part2-7.11-V1.0.docx
